tests/derive-bitfield-specifier/09-variant-out-of-range.stderr
error[E0277]: the trait bound `False: DiscriminantInRange` is not satisfied
   --> tests/derive-bitfield-specifier/09-variant-out-of-range.rs:17:5
    |
17  |     External,
    |     ^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `False`
    |
    = help: the trait `DiscriminantInRange` is implemented for `True`
note: required by a bound in `CheckDiscriminantInRange`
   --> src/private/checks.rs
    |
    |     <Self::CheckType as DispatchTrueFalse>::Out: DiscriminantInRange,
    |                                                  ^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckDiscriminantInRange`
